--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
   {{burger_name}}
-  <button data-id="{{id}}">
+  <button class="btn-state" data-id="{{id}}" data-next-state="{{next-state}}">
     {{#if devoured}}RESTOCK DA BOIGAH{{else}}EAT DA BOIGAH{{/if}}
   </button>
 </li>
