--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eat Da Boigah</title>
+
   </head>
   <body>
     {{{body}}}
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
