--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,31 @@
 <h1>Hi, welcome to Eat-da-Boigah, may I take your order?</h1>
 
 <h2>Add a Boigah</h2>
-<form>
+<form class="form-boigah">
   <input type="text" name="name" id="js-input-name">
   <input type="submit" id="js-btn-submit" value="Add Da Boigah">
 </form>
 
-<h2>BOIGAHS IN STOCK</h2>
-<ol>
-  {{#each burgers}}
-  {{#unless devoured}}
-  {{> burger/burger-block next-state=1}}
-  {{/unless}}
-  {{/each}}
-</ol>
+<div class="boigah-container">
+  <div class="boigah-box">
+    <h2>BOIGAHS IN STOCK</h2>
+    <ol>
+      {{#each burgers}}
+      {{#unless devoured}}
+      {{> burger/burger-block next-state=1}}
+      {{/unless}}
+      {{/each}}
+    </ol>
+  </div>
 
-<h2>BOIGAHS DEVOURED</h2>
-<ol>
-  {{#each burgers}}
-  {{#if devoured}}
-  {{> burger/burger-block next-state=0}}
-  {{/if}}
-  {{/each}}
-</ol>
+  <div class="boigah-box">
+    <h2>BOIGAHS DEVOURED</h2>
+    <ol>
+      {{#each burgers}}
+      {{#if devoured}}
+      {{> burger/burger-block next-state=0}}
+      {{/if}}
+      {{/each}}
+    </ol>
+  </div>
+</div>
