--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eat Da Boigah</title>
-
+    <link rel="stylesheet" href="./assets/css/main.css">
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      {{{body}}}
+    </div>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
